Mon Apr 12 11:40:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Cornucopia/Cornucopia.idl:
          Disabled some methods for LwCCM

Mon Apr 12 10:00:13 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test_cdr.pl:
        * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test.pl:
        * DAnCE/tests/CIAO/EM-Launch-Failures/run_test.pl:
        * DAnCE/tests/CIAO/EM-Redeployment/run_test.pl:

          Changes to allow tests to run in multiplatform setup.

Mon Apr 12 06:56:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_EventConsumerBase.idl:
          Removed ciao specific extensions which are not used anymore

Fri Apr  9 17:56:44 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/DDSWriterEntity/Sender/Writer_Sender_exec.h:
          Resolved compile error.

Fri Apr  9 13:36:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Servant_Impl_Base.cpp:
          Throw CORBA::BAD_PARAM with 0 for string

Fri Apr  9 12:49:53 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/performance-tests/Throughput/Connector/Throughput_Connector.idl:
        * connectors/dds4ccm/performance-tests/Throughput/Receiver/Throughput_Receiver.idl:
        * connectors/dds4ccm/performance-tests/Throughput/Receiver/Throughput_Receiver_exec.h:
        * connectors/dds4ccm/performance-tests/Throughput/Receiver/Throughput_Receiver_exec.cpp:
        * connectors/dds4ccm/performance-tests/Throughput/SecConnector/Throughput_Sec_Connector.idl:
        * connectors/dds4ccm/performance-tests/Throughput/Sender/Throughput_Sender.idl:
        * connectors/dds4ccm/performance-tests/Throughput/Sender/Throughput_Sender_exec.h:
        * connectors/dds4ccm/performance-tests/Throughput/Sender/Throughput_Sender_exec.cpp:
          Moved connector declaration to the namespace of the test.