@@ -3,9 +3,6 @@
 //=============================================================================
 /**
  * @file RoundTripClientEI.idl
- *
- *
- * @author
  */
 //=============================================================================
 
