@@ -1,3 +1,15 @@
+Mon Apr 12 12:20:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * performance-tests/Benchmark/Multi_Threaded/Client_Task.cpp
+        * performance-tests/Benchmark/RoundTrip/client.cpp
+        * performance-tests/Benchmark/RoundTripClient/client.cpp
+        * performance-tests/Benchmark/RoundTripClient/RoundTripClientEI.idl
+          Only use LwCCM methods
+
+        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
+        * ciao/Servants/Servant_Impl_Base.cpp:
+          Fixed compile warnings
+
 Mon Apr 12 11:40:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/IDL_Test/Cornucopia/Cornucopia.idl:
